# mysensei

./: .gitignore  README.md  pyproject.toml
app/: get_mnemonics.py  main.py  ui_to_use.py
mysensei/: annotations.py  generation.py  io.py  sql.py  text.py  ui.py
templates/pure_concepts/: 0.jinja
templates/pure_concepts_revision/: 0.jinja
templates/reading_mnem/: 0.jinja
tests/: test_generation.py
