[tool.poetry]
name = "mysensei"
version = "0.1.0"
description = ""
authors = ["Xavier Fontaine <xavier.fontainec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nicegui = "^1.2.24"
sqlalchemy = "^2.0.18"
jinja2 = "^3.1.2"
openai = "^0.27.9"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
